--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,34 +7,32 @@
           <div class="card" style="border-radius: 15px;">
             <div class="card-body p-5">
               <h2 class="text-uppercase text-center mb-5">Login</h2>
-              <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
+              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example3cg">Your Email</label>
                   <input type="email" id="form3Example3cg" class="form-control form-control-lg
                           'has-danger'= email.invalid && (email.dirty || email.touched),
                           'has-success'= email.valid && (email.dirty || email.touched)"
                          formControlName="email"/>
-                  <span *ngIf="formLogin.controls['email'].getError('required')
-                  && (formLogin.controls['email'].dirty || formLogin.controls['email'].touched)"
+                  <span *ngIf="loginForm.controls['email'].getError('required')
+                  && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)"
                         class="text-invalid">Email is empty</span>
-                  <span *ngIf="formLogin.controls['email'].getError('pattern')
-                  && (formLogin.controls['email'].dirty || formLogin.controls['email'].touched)"
+                  <span *ngIf="loginForm.controls['email'].getError('pattern')
+                  && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)"
                         class="text-invalid">Email is invalid</span>
                 </div>
-
                 <div class="form-outline mb-4">
                   <label class="form-label" for="form3Example4cg">Password</label>
                   <input type="password" id="form3Example4cg" class="form-control form-control-lg"
                          formControlName="password"/>
-                  <span *ngIf="formLogin.controls['password'].getError('minlength')
-                  && (formLogin.controls['password'].dirty || formLogin.controls['password'].touched)"
+                  <span *ngIf="loginForm.controls['password'].getError('minlength')
+                  && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)"
                         class="text-invalid">Password is too short</span>
                 </div>
-
                 <div class="d-flex justify-content-center">
                   <button type="submit"
                           class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
-                          [disabled]="!formLogin.valid">Login</button>
+                          [disabled]="!loginForm.valid">Login</button>
                 </div>
               </form>
             </div>
