--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,27 @@
-<nav class="nav nav-pills nav-fill">
-  <a class="nav-link" routerLink="">Home</a>
-  <a class="nav-link" routerLink="/register">Register</a>
-  <a class="nav-link" routerLink="/login">Login</a>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #84fab0;">
+  <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>-->
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav me-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="">Home <span class="sr-only"></span></a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item" *ngIf="isUserLoggedIn(); else showLogin">
+        <a class="nav-link" routerLink="" (click)="onLogout()">Logout</a>
+      </li>
+      <ng-template #showLogin>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/login">Login</a>
+        </li>
+      </ng-template>
+    </ul>
+  </div>
   <form class="d-flex" role="search">
     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success" type="submit">Search</button>
